refactor(blog): update 2025 year in review with raw source content
- Replace formal intro with personal Genesis day narrative
- Add grantee question epigraphs to each section
- Reorder sections: Announcements, Allocation, Donations, Outlook
- Merge Grantees and Impact sections into Allocation
- Add narrative-style announcements timeline
- Include sustainability focus in Outlook section

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -8,174 +8,169 @@ images: ['/static/images/blog/66-opensats-2024-year-in-review.jpg']
 summary: '365 days. Two funds. 350+ grants. Billions of sats.'
 ---
 
-Twenty-twenty-five. The momentum continues. Over the past year, we allocated
-\$11,088,677 to 229 grants—up 21% from \$9,167,491 in 2024. We published our
-first impact reports and onboarded more long-term support grantees than ever
-before. We want to take the opportunity to pause, reflect, and share our year in
-review—looking back at announcements, donations, fund allocation, and grantee
-growth—before providing an outlook for the year ahead.
+It's January 3rd as I'm writing these lines. Genesis day. Bitcoin's 17th
+birthday. It's curious that Bitcoin's birthday lines up with the start of a new
+year: a time to reflect, a time to look back at the year that has passed.
 
-- [Announcements](#announcements)
-- [Donations](#donations)
-- [Impact](#impact)
-- [Allocation](#allocation)
-- [Grantees](#grantees)
-- [Outlook](#outlook)
+The little thing that Satoshi launched into the world is not so little anymore.
+Not fully grown up, but also not a kid anymore. A teenager. More successful than
+most teenagers, but still a teenager.
 
-Before we dive into the numbers, a brief reminder of why we do what we do.
-OpenSats exists to provide [consistent funding](/about) for free and open-source
-projects, especially those that help bitcoin flourish. We believe these projects
-have the potential to revolutionize individual sovereignty and
-liberty—values that underpin everything we support. Our structure keeps overhead
-low: we don't take a cut from donations, and our 9-person board ensures no
-single individual controls funding decisions.
+So: where are we in terms of Bitcoin's development? There's the obvious part and
+the not-so-obvious part. Let's do the obvious first: Nation states hold BTC on
+their balance sheets. Serious people with serious suites and serious companies
+talk about it on TV, in a non-dismissive (serious) way. If you bring it up in
+conversation you don't get laughed out of the room anymore. While most people
+have heard of bitcoin by now, it is probably fair to say that for the vast
+majority contact was peripheral and understanding superficial. Consequently,
+only a small percentage use it in a self-sovereign way. In absolute terms,
+however, the number is growing. The mainstream association now seems to be
+squarely in the "asset" and "digital gold" quadrant, as opposed to "speculation"
+a couple of years ago, or gambling and shady internet money used exclusively for
+questionable things before that.
 
-We continue to learn and improve. Some grants will produce outsized returns;
-others won't pan out as hoped. We accept this reality and strive to get better
-at [selecting projects](/selection) with each passing year. The growth detailed in this report is thanks to our grantees, our donors, and
-the people who keep OpenSats running.
+Now to the not-so-obvious part: Bitcoin is still alive. It has operated for
+seventeen years, mostly quietly, mostly in the background. A new block has been
+mined every 10 minutes. Over 900,000 blocks since genesis, moving trillions of
+sats in the process. The cumulative hash rate of the network is at an all-time
+high: a number so unfathomably large that it's almost impossible to put into
+comparison. Lightning liquidity is at an all-time high too, as is the number of
+merchants accepting bitcoin as a form of payment. It's now easier than ever to
+live on a bitcoin standard, thanks to countless open-source projects and the
+services that build upon them. Bitcoin gets more efficient, resilient, and
+useful by the day. From basic research to fuzz testing to Stratum V2 to Silent
+Payments to Splicing to open-source tools for merchants and users, OpenSats is
+funding a myriad of efforts across the stack to support Bitcoin through its
+teenage years.
 
-Donors send us fiat or bitcoin. We hold virtually all of it in bitcoin and pay
-out in bitcoin exclusively. Every month in 2025, we sent roughly \$1 million to
-developers in 40+ countries. Every single month, without fail.
+Over the last 18 months we've sent roughly \$1,000,000 USD worth of sats to
+grantees in 40+ countries, every month. During the course of 2025 we supported
+more than 150 active grantees at any point in time: small teams, large teams,
+educational efforts, and—most importantly—individual developers.
 
 ![](/static/images/blog/2025-eoy/2025-monthly-grant-payouts.svg)
+
+When we reach out to our grantees we ask three simple questions: How did you
+spend your time? What are your plans for next quarter? How did you use the
+funds? We also follow it up with a fourth: Is there anything we could help with?
+
+As we look back at 2025, it is now our turn to answer these questions.
+
+- [Announcements](#announcements)
+- [Allocation](#allocation)
+- [Donations](#donations)
+- [Outlook](#outlook)
 
 ---
 
 ## Announcements
 
-We began 2025 by announcing [additional grants for Bitcoin Core
-contributors](/blog/more-for-core), awarding support to
-[L0rinc](/blog/more-for-core#l0rinc),
-[kevkevinpal](/blog/more-for-core#kevkevinpal), and
-[Daniela Brozzoni](/blog/more-for-core#danielabrozzoni)—all focused on
-performance, testing, and code review for Bitcoin's reference implementation.
+> How did you spend your time?
 
-In June, we welcomed [SnowCait](/blog/snowcait-receives-lts-grant) to our
-long-term support roster for his work on the nostr ecosystem, including the
-`nostter` client and `Snowflare` relay. In December, we announced LTS grants for
-[Andrew Toth](/blog/andrew-toth-receives-lts-grant), a Bitcoin Core contributor
-working on IBD performance and Silent Payments BIPs, and [Brad
-Stachurski](/blog/brad-stachurski-receives-lts), a Fedimint co-maintainer
-focused on security and deployment tooling.
+Our mission is simple: we want to support and maintain a sustainable ecosystem
+of funding for free and open-source projects and contributors, especially
+bitcoin-related projects and projects that help bitcoin flourish. Our day-to-day
+operations thus consist of the following: receiving grant applications,
+evaluating grant applications (in terms of scope, technical feasibility,
+clarity, potential impact, and scalability), doing due diligence, and arriving
+at a final decision through majority vote. We want to support the best projects
+and people. At the same time, we want to avoid wasting donor funds, which is why
+we keep a close eye on our grantees to make sure that progress goals and agreed
+upon milestones are hit. And last but not least, we are spending our time on
+long-term donor relationships and fundraising efforts. After all, we can only
+support as many grantees as we do if there are sats in our vaults.
+
+We announce all our grants publicly on our blog, along with our initiatives and
+noteworthy donations. Looking at the announcements made in 2025 one should get a
+pretty good idea of what we've been up to: In January 2025 we announced
+[additional grants for Bitcoin Core contributors](/blog/more-for-core), followed
+by a [wave of bitcoin grants](/blog/ninth-wave-of-bitcoin-grants) announced
+shortly after. In February we published our first impact report: [Advancements
+in On-Chain Privacy](/blog/developing-advancements-in-onchain-privacy). In March
+we announced the [10th wave of grants](/blog/tenth-wave-of-bitcoin-grants) from
+the General Fund as well as the [10th wave of grants](/blog/10th-wave-of-nostr-grants)
+from The Nostr Fund. We also published "[Let a Thousand Flowers
+Bloom](/blog/let-a-thousand-flowers-bloom)," outlining our thesis on how to best
+scale OpenSats horizontally.
+
+In April we announced our [4th wave of education
+grants](/blog/fourth-wave-of-education-grants), followed by [another wave of
+nostr grants](/blog/eleventh-wave-of-nostr-grants) and our next impact report:
+[Advancements in Lightning Infrastructure](/blog/advancements-in-lightning-infrastructure).
+In May we announced yet [another wave of grants](/blog/eleventh-wave-of-bitcoin-grants)
+(and grant renewals) from our General Fund.
+
+June marked the release of our third impact report, [Advancements in Developer
+Training](/blog/advancements-in-developer-training), highlighting progress of
+some of the developer-focused education initiatives we fund: Summer of Bitcoin,
+Africa Free Routing, Bitcoin Dev Launchpad, and Bitshala. We also announced our
+long-term support for [SnowCait](/blog/snowcait-receives-lts-grant), a prolific
+nostr developer. In July we announced the [12th wave of
+grants](/blog/twelfth-wave-of-bitcoin-grants) from the General Fund as well as
+[The Nostr Fund](/blog/twelfth-wave-of-nostr-grants), respectively.
 
 ![](/static/images/blog/2025-eoy/2025-lts.png)
 
-Throughout 2025, we announced [seven waves of bitcoin
-grants](/tags/wave)—from the [9th wave](/blog/ninth-wave-of-bitcoin-grants) in
-January through the [15th wave](/blog/fifteenth-wave-of-bitcoin-grants) in
-December. These waves supported projects ranging from [Silent Payments
-tooling](/blog/fifteenth-wave-of-bitcoin-grants#blindbit-suite) and
-[mining decentralization](/blog/eleventh-wave-of-bitcoin-grants#256-foundation)
-to [protocol research](/blog/fifteenth-wave-of-bitcoin-grants#lnhance) and
-[developer well-being](/blog/tenth-wave-of-bitcoin-grants#waye).
+In August we published yet another impact report: [Advancements in Developer
+Libraries](/blog/advancements-in-developer-libraries). We fund a lot of projects
+that are by their very nature invisible to the end-user. Software development
+kits and libraries that a myriad of projects depend upon. BDK, `rust-bitcoin`,
+Payjoin Dev Kit, DLC Dev Kit, libraries focused on `secp256k1`, and many others.
+Developing and maintaining these libraries is hard and often thankless, but
+paramount to a flourishing bitcoin ecosystem. As one of our grantees Tobin
+Harding succinctly put it: "My job is to provide libraries so other devs can
+create software that users love. If no one ever mentions rust-bitcoin while
+simultaneously using it every day, then we win." Our [13th wave of
+grants](/blog/thirteenth-wave-of-bitcoin-grants), also announced in August,
+showed our commitment to those infrastructure-like software projects: Tor,
+Tails, and `ngx_L402` are all puzzle pieces to the larger freedom tech picture.
 
-On the nostr side, we announced [five waves of
-grants](/tags/nostr)—from the [10th
-wave](/blog/10th-wave-of-nostr-grants) in March through the [14th
-wave](/blog/fourteenth-wave-of-nostr-grants) in December. Projects funded
-include [Frostr](/blog/twelfth-wave-of-nostr-grants#frostr) for threshold
-signing, [HAMSTR](/blog/eleventh-wave-of-nostr-grants#hamstr) for nostr over ham
-radio, [Gitplaza](/blog/twelfth-wave-of-nostr-grants#gitplaza) for decentralized
-code collaboration, and
-[Zapstore](/blog/10th-wave-of-nostr-grants#zapstore) for permissionless app
-distribution.
+In September we highlighted what advancements our grantees made on [the ecash
+front](/blog/advancements-in-ecash): Cashu, CDK, Nutshell, Minibits, Nutstash,
+npub.cash, Hashpool, Fedimint, and OpenCash. We believe that Chaumian ecash has
+a large role to play in bitcoin's future, and are proud to support the people
+and projects who are pushing this technology forward.
 
-In April, we announced our [4th wave of education
-grants](/blog/fourth-wave-of-education-grants), supporting [Librería de
-Satoshi](/blog/fourth-wave-of-education-grants#librería-de-satoshi) for Spanish
-technical training, [Crack the
-Orange](/blog/fourth-wave-of-education-grants#crack-the-orange) for the Global
-South, and [FREE Madeira](/blog/fourth-wave-of-education-grants#free-madeira)
-for Bitcoin education in Portugal.
-
-One of our most significant announcements came in March with "[Let a Thousand
-Flowers Bloom](/blog/let-a-thousand-flowers-bloom)," where we funded six
-organizations working to expand the open-source funding ecosystem:
-[2140](/blog/let-a-thousand-flowers-bloom#2140) (European nonprofit for Bitcoin
-Core), [OpenCash](/blog/let-a-thousand-flowers-bloom#opencash) (Swiss nonprofit
-for Cashu), [Bitshala](/blog/let-a-thousand-flowers-bloom#bitshala) (India
-developer education), [Summer of
-Bitcoin](/blog/let-a-thousand-flowers-bloom#summer-of-bitcoin) (global
-internship program), [Bitcoin Dev
-Launchpad](/blog/let-a-thousand-flowers-bloom#bitcoin-dev-launchpad) (Vinteum's
-40-week training), and the [Foundation Formation
-Kit](/blog/let-a-thousand-flowers-bloom#foundation-formation-kit) (tools for
-creating tax-exempt foundations). We believe a healthy ecosystem requires many
-funding sources, and these organizations help make that possible.
-
-Our support for all of these projects and initiatives is made possible by our
-donors. If you like what we do, please consider [making a
-donation](/donate).
-
----
-
-## Donations
-
-2025 was a good year for donations. Individuals and organizations both showed up.
-
-The [Human Rights Foundation](/blog/additional-ops-budget-from-hrf) contributed
-\$250,000 to our Operations Budget, allowing us to maintain the organizational
-infrastructure that makes our grant-giving possible. The [Reynolds
-Foundation](/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation)
-followed up their 2024 gift with an additional \$2,000,000 donation to our
-General Fund.
-
-In October, [Tether](/blog/opensats-receives-dollar250k-donation-from-tether)
-donated \$250,000, and [StarkWare together with the Starknet
-Foundation](/blog/opensats-receives-dollar400k-donation-from-starkware-starknet)
-contributed \$400,000—both directed to our General Fund. Bitcoin's open-source foundation needs sustained investment, and these donors
-stepped up.
-
-We also received our first bitcoin-denominated recurring commitment when [Steak
-'n Shake](/blog/opensats-receives-donation-commitment-from-steak-n-shake)
-announced they would donate 210 sats from every Bitcoin Meal sold over the
-next twelve months. We hope other companies follow their lead.
-
-In terms of individual donations, bitcoin payment rails continue to dominate.
-The ratio of Lightning to on-chain payments remained steady at approximately
-70% Lightning. The vast majority of donations continue to flow to our [General
-Fund](/funds/general), with the remainder split between [The Nostr
-Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
-
-[![](/static/images/blog/2025-eoy/2025-recurring-donations.png)](https://adtjkuks.donorsupport.co/page/opensats)
-
-<center>
-  <DonateRecurringButton />
-</center>
-
-100% of donations to our General Fund and The Nostr Fund go directly to
-grantees. Our operations are funded separately. When you donate, your money
-reaches developers.
-
----
-
-## Impact
-
-This year we published our first impact reports, documenting what our grantees
-have built and shipped. The reports cover [on-chain
-privacy](/blog/developing-advancements-in-onchain-privacy), [Lightning
-infrastructure](/blog/advancements-in-lightning-infrastructure), [developer
-training](/blog/advancements-in-developer-training), [developer
-libraries](/blog/advancements-in-developer-libraries),
-[ecash](/blog/advancements-in-ecash), [wallets](/blog/advancements-in-bitcoin-and-lightning-wallets), and [nostr
-clients](/blog/advancements-in-nostr-clients).
-
-Highlights include Payjoin V2 shipping in Bull Bitcoin and Cake Wallet, Cashu
-mobile bindings reaching maturity, and major improvements across Amethyst,
-Damus, and Coracle.
-
-> Without the OpenSats grant awarded to Payjoin Dev Kit, Payjoin V2 may never
-> have come to exist and would have remained an idea in the mind of cypherpunks.
->
-> <cite>—Francis Pouliot, CEO of Bull Bitcoin</cite>
-
-We encourage you to read the reports in full.
+In October we announced the [14th wave of grants](/blog/fourteenth-wave-of-bitcoin-grants)
+from our General Fund, followed by an impact report on [Advancements in Bitcoin
+and Lightning Wallets](/blog/advancements-in-bitcoin-and-lightning-wallets). In
+November we published the [13th wave of nostr
+grants](/blog/thirteenth-wave-of-nostr-grants), and we concluded the year in
+December with the announcement of the [14th](/blog/fourteenth-wave-of-nostr-grants)
+and [15th wave](/blog/fifteenth-wave-of-bitcoin-grants) respectively, as well as
+our first impact report focusing on the nostr ecosystem: [Advancements in Nostr
+Clients](/blog/advancements-in-nostr-clients). On the last day of the year we
+announced our long-term support for [Brad
+Stachurski](/blog/brad-stachurski-receives-lts), who was the 2nd LTS recipient
+in December, following [Andrew Toth](/blog/andrew-toth-receives-lts-grant).
 
 ---
 
 ## Allocation
+
+> How did you use the funds?
+
+OpenSats exists because we want to see contributors to Bitcoin and free and
+open-source tools supported by a sustainable ecosystem and consistent funding.
+Our LTS program (long-term support) aims to do just that: support the best
+people for a multi-year period. Consequently, a lot of our funds are dedicated
+to our LTS grantees. In 2025, we allocated a total of \$3,993,949 to long-term
+support, up 77% from last year. That said, we allocated almost twice as much to
+regular, project-based grants with a total of \$7,094,729 (up 3% from last
+year). In total, we have now given over 350 grants since launching our grant
+program in 2023.
+
+![](/static/images/blog/2025-eoy/2025-grantee-growth.png)
+
+As mentioned before, we are currently sending approximately \$1 million worth of
+bitcoin to our grantees each month. Thanks to the power of magic internet money
+we can do this with minimal overhead and near-instant settlement—regardless of
+where our grantees are located. As of this writing, our grantees span over 40
+countries:
+
+<GranteeMap />
+
+<StatsSentence className="text-xl leading-8 text-gray-500 dark:text-gray-400" />
 
 Our two funds serve distinct purposes: the [General Fund](/funds/general)
 supports bitcoin-related projects and other free and open-source work that
@@ -294,10 +289,6 @@ on protocol development, client infrastructure, and ecosystem tooling. The
 addition of [SnowCait](/blog/snowcait-receives-lts-grant) in June strengthened
 our support for Japanese nostr development.
 
-<center>
-  <DonateRecurringButton />
-</center>
-
 You can read more about these projects in our grant announcements from
 [March](/blog/10th-wave-of-nostr-grants),
 [April](/blog/eleventh-wave-of-nostr-grants),
@@ -307,31 +298,64 @@ You can read more about these projects in our grant announcements from
 
 ---
 
-## Grantees
+## Donations
 
-We issued 229 grants in 2025: 116 new and 113 continuing. Long-term support
-grants totaled \$3,993,949 (up 77% from 2024); regular grants came to
-\$7,094,729 (up 3%). In total, we have now given over 350 grants since launching
-our grant program in 2023.
+> Is there anything we could help with?
 
-![](/static/images/blog/2025-eoy/2025-grantee-growth.png)
+2025 was a good year for donations. Individuals and organizations both showed up.
 
-As of December 2025, we are sending over \$1 million worth of bitcoin to our
-grantees each month. Thanks to bitcoin and Lightning, we can do this with
-minimal overhead and near-instant settlement—regardless of where our grantees
-are located. Our grantees span over 40 countries:
+The [Human Rights Foundation](/blog/additional-ops-budget-from-hrf) contributed
+\$250,000 to our Operations Budget, allowing us to maintain the organizational
+infrastructure that makes our grant-giving possible. The [Reynolds
+Foundation](/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation)
+followed up their 2024 gift with an additional \$2,000,000 donation to our
+General Fund.
 
-<GranteeMap />
+In October, [Tether](/blog/opensats-receives-dollar250k-donation-from-tether)
+donated \$250,000, and [StarkWare together with the Starknet
+Foundation](/blog/opensats-receives-dollar400k-donation-from-starkware-starknet)
+contributed \$400,000—both directed to our General Fund. Bitcoin's open-source
+foundation needs sustained investment, and these donors stepped up.
 
-<StatsSentence className="text-xl leading-8 text-gray-500 dark:text-gray-400" />
+We also received our first bitcoin-denominated recurring commitment when [Steak
+'n Shake](/blog/opensats-receives-donation-commitment-from-steak-n-shake)
+announced they would donate 210 sats from every Bitcoin Meal sold over the
+next twelve months. We hope other companies follow their lead.
 
-Many of this year's grants were renewals. When grantees do good work and
-funding permits, we keep supporting them. Developers should build, not
-fundraise.
+In terms of individual donations, bitcoin payment rails continue to dominate.
+The ratio of Lightning to on-chain payments remained steady at approximately
+70% Lightning. The vast majority of donations continue to flow to our [General
+Fund](/funds/general), with the remainder split between [The Nostr
+Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
+
+[![](/static/images/blog/2025-eoy/2025-recurring-donations.png)](https://adtjkuks.donorsupport.co/page/opensats)
+
+<center>
+  <DonateRecurringButton />
+</center>
+
+100% of donations to our General Fund and The Nostr Fund go directly to
+grantees. Our operations are funded separately. When you donate, your money
+reaches developers.
 
 ---
 
 ## Outlook
+
+> What are your plans for next quarter?
+
+Where to go from here? Allow me to quote our mission statement: OpenSats is a
+501(c)(3) public charity that aims to support and maintain a *sustainable*
+ecosystem of funding for free and open-source projects and contributors,
+especially bitcoin-related projects and projects that help bitcoin flourish.
+Emphasis mine.
+
+Sustainability has multiple dimensions. We want to keep doing what we've been
+doing in the leanest way possible, without burning out. We want to continue to
+offer long-term support for load-bearing internet people, providing at least
+some stability in an otherwise uncertain world. We want to stay true to our
+principles, which means not taking a cut from donations to our funds, raising
+funding for our operational budget separately.
 
 Bitcoin continues to mature as both technology and asset. Silent Payments
 infrastructure is moving from specification to production. Ecash protocols are
