feat(blog): add 2025 focus areas chart to year in review
Add visualization showing top 5 funding focus areas (Bitcoin Core, eCash,
Libraries, Education, Infrastructure) in the General Fund section.

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -198,6 +198,8 @@ In 2025, our General Fund grants emphasized several key areas: Bitcoin Core
 development, Silent Payments infrastructure, Lightning improvements, ecash
 tooling, mining decentralization, and developer libraries.
 
+![](/static/images/blog/2025-eoy/2025-focus-areas.png)
+
 Bitcoin Core support remained central to our allocation. Beyond the LTS grants
 for experienced contributors, we funded projects that strengthen the reference
 implementation: performance optimizations, testing infrastructure, and the
